--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/2cfb4c96ee.js" crossorigin="anonymous"></script>
     <title>Whisperer</title>
+    <meta name="description" content="Create your own Whisper images." />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@aaaronson" />
+    <meta name="twitter:title" content="Whisperer" />
+    <meta name="twitter:description" content="Create your own Whisper images." />
+    <meta name="twitter:image" content="https://aaronson.org/whisperer/logo.png" />
+    <meta property="og:title" content="Whisperer" />
+    <meta property="og:url" content="https://aaronson.org/whisperer/" />
+    <meta property="og:description" content="Create your own Whisper images." />
+    <meta property="og:image" content="https://aaronson.org/whisperer/logo.png" />
   </head>
   <body>
     <div id="root"></div>
