--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       gtag("config", "G-FQJ37CN1J0");
     </script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5987397144882002"
+    crossorigin="anonymous"></script>
+
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
