Update meta description

--- a/index.html
+++ b/index.html
@@ -1,48 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-FQJ37CN1J0"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+    <head>
+        <!-- Google tag (gtag.js) -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-FQJ37CN1J0"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
 
-      gtag("config", "G-FQJ37CN1J0");
-    </script>
+            gtag("config", "G-FQJ37CN1J0");
+        </script>
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5987397144882002"
-    crossorigin="anonymous"></script>
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5987397144882002"
+            crossorigin="anonymous"
+        ></script>
 
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Whisperer</title>
-    <meta name="description" content="Create your own Whisper images" />
+        <meta charset="UTF-8" />
+        <link rel="icon" href="/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Whisperer</title>
+        <meta
+            name="description"
+            content="Whisper meme generator. Create your own Whisper images using the classic Whisper font!"
+        />
 
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@aaaronson" />
-    <meta name="twitter:title" content="Whisperer" />
-    <meta name="twitter:description" content="Create your own Whisper images" />
-    <meta
-      name="twitter:image"
-      content="https://aaronson.org/whisperer/logo.png"
-    />
-    <meta property="og:title" content="Whisperer" />
-    <meta property="og:url" content="https://aaronson.org/whisperer/" />
-    <meta property="og:description" content="Create your own Whisper images" />
-    <meta
-      property="og:image"
-      content="https://aaronson.org/whisperer/logo.png"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:site" content="@aaaronson" />
+        <meta name="twitter:title" content="Whisperer" />
+        <meta
+            name="twitter:description"
+            content="Whisper meme generator. Create your own Whisper images using the classic Whisper font!"
+        />
+        <meta
+            name="twitter:image"
+            content="https://aaronson.org/whisperer/logo.png"
+        />
+        <meta property="og:title" content="Whisperer" />
+        <meta property="og:url" content="https://aaronson.org/whisperer/" />
+        <meta
+            property="og:description"
+            content="Whisper meme generator. Create your own Whisper images using the classic Whisper font!"
+        />
+        <meta
+            property="og:image"
+            content="https://aaronson.org/whisperer/logo.png"
+        />
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
